--- a/sample/index.html
+++ b/sample/index.html
@@ -9,13 +9,15 @@
 			margin: 20px auto;
 		}
 	</style>
+	    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css">
+
 </head>
 <body>
 
 <h1>CKEditor 5 – classic editor build – development sample</h1>
 
 <div id="editor">
-	<h2>Sample</h2>
+	<h2>Sample 2</h2>
 
 	<p>This is an instance of the <a href="https://ckeditor.com/docs/ckeditor5/latest/builds/guides/overview.html#classic-editor">classic editor build</a>.</p>
 
@@ -25,7 +27,7 @@
 
 	<p>You can use this sample to validate whether your <a href="https://ckeditor.com/docs/ckeditor5/latest/builds/guides/development/custom-builds.html">custom build</a> works fine.</p>
 </div>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/katex.min.js"></script>
 <script src="../build/ckeditor.js"></script>
 <script>
 	ClassicEditor.create( document.querySelector( '#editor' ) )
